[project]
name = "QBenchAnalyzer"
version = "0.0.4"
authors = [
  { name="Vicente López-Oliva", email="voliva@uji.es" },
]
description = "Tool for analyzing quantum circuits"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/voliva-esp/QBenchAnalyzer"
Issues = "https://github.com/voliva-esp/QBenchAnalyzer/issues"


[build-system]
# Minimum requirements for the build system to execute.
requires = ["qiskit>=1.2.4", "matplotlib>=3.7.5"]